# fformation

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  fformationConfig.cmake.in
app/: evaluation.cpp  json-parser.cpp
cmake/: Config.cmake.in  FindDependency.cmake
src/: Classification.cpp  Classification.h  ConfusionMatrix.cpp  ConfusionMatrix.h  Evaluation.cpp  Evaluation.h  Exception.cpp  Exception.h  Features.cpp  Features.h  Fformation.cpp  Fformation.h  FoV.cpp  FoV.h  GroundTruth.cpp  GroundTruth.h  Group.cpp  Group.h  GroupDetector.cpp  GroupDetector.h  GroupDetectorFactory.cpp  GroupDetectorFactory.h  GroupDetectorsEM.cpp  GroupDetectorsEM.h  JsonReader.cpp  JsonReader.h  JsonSerializable.cpp  JsonSerializable.h  Observation.cpp  Observation.h  Options.cpp  Options.h  OstreamPrinter.cpp  OstreamPrinter.h  Person.cpp  Person.h  PersonId.cpp  PersonId.h  Pose.cpp  Pose.h  (+6 more)
src/dep/: json.hpp
test/: CMakeLists.txt  Classification.cpp  ConfusionMatrix.cpp  Exception.cpp  Features.cpp  Fformation.cpp  FoV.cpp  GroundTruth.cpp  Group.cpp  GroupDetectorFactory.cpp  JsonReader.cpp  JsonSerializable.cpp  Observation.cpp  Options.cpp  Person.cpp  PersonId.cpp  Pose.cpp  Position.cpp  Settings.cpp  Timestamp.cpp
test/gtest/: CMakeLists.txt  gtest.h
